clearbit-index.html

--- a/clearbit-index.html
+++ b/clearbit-index.html
@@ -15,7 +15,7 @@
         <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     </head>
     <body>
-        
+
         <!---------------------- NAVBAR ---------------------->
         <header>
 
@@ -40,6 +40,7 @@
             </div>
 
         </header>
+
         <!---------------------- CONTENT ---------------------->
         <section>
 
@@ -70,6 +71,7 @@
                 <br>
                 <p>Clearbit's Activation Platform gives marketing and revenue teams a rich, always-fresh data foundation and solutions for converting demand, and accelerating revenue growth.</p>
             </div>
+
             <!-------------- STATS STATS STATS -------------->
 
             <div class="stats-area">
@@ -98,5 +100,10 @@
 
         </section>
 
+        <!---------------------- FOOTER ---------------------->
+        <footer>
+            <p style="font-weight: 600;">&copy; 2023 Clearbit. All rights reserved.</p>
+        </footer>
+        
     </body>
 </html>
